Added the files such as unitofwork and models.

--- a/ExamPracticalThree/appsettings.json
+++ b/ExamPracticalThree/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=exam_database;Username=root;Password=;Convert Zero Datetime=true;"
+  },
+  "jwt": {
+    "ValidAudience": "https://localhost:44388/",
+    "ValidIssuer": "https://localhost:44388/",
+    "Secret": "This is Practical Examination!"
   }
 }
